--- a/PasteIt/Base.lproj/Main.storyboard
+++ b/PasteIt/Base.lproj/Main.storyboard
@@ -172,37 +172,56 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Paste Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iNc-Is-mVL">
-                                <rect key="frame" x="20" y="106" width="303" height="30"/>
+                                <rect key="frame" x="20" y="80" width="303" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Paste Author" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LS2-3n-g64">
-                                <rect key="frame" x="20" y="153" width="303" height="30"/>
+                                <rect key="frame" x="20" y="118" width="303" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NAb-y1-bAc">
-                                <rect key="frame" x="20" y="269" width="303" height="80"/>
+                                <rect key="frame" x="20" y="333" width="303" height="80"/>
                                 <connections>
                                     <outlet property="dataSource" destination="k94-vv-ZyK" id="J2q-DC-lK4"/>
                                     <outlet property="delegate" destination="k94-vv-ZyK" id="jLi-72-VIf"/>
                                 </connections>
                             </pickerView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="eam-ec-y5p">
-                                <rect key="frame" x="20" y="366" width="303" height="214"/>
+                                <rect key="frame" x="20" y="426" width="303" height="154"/>
                                 <color key="backgroundColor" red="0.90496083619330958" green="1" blue="0.90309105049775718" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="wJM-Ge-YOn">
+                                <rect key="frame" x="274" y="156" width="51" height="31"/>
+                            </switch>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Set Paste To Private" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edF-wH-hiJ">
-                                <rect key="frame" x="20" y="227" width="187" height="21"/>
+                                <rect key="frame" x="20" y="156" width="186" height="31"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="wJM-Ge-YOn">
-                                <rect key="frame" x="249" y="222" width="51" height="31"/>
-                            </switch>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2hk-XQ-THQ">
+                                <rect key="frame" x="22" y="224" width="298" height="65"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="k94-vv-ZyK" id="wFq-Jw-Lx2"/>
+                                    <outlet property="delegate" destination="k94-vv-ZyK" id="KEB-2I-PVL"/>
+                                </connections>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Expiration Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZkE-nF-sX4">
+                                <rect key="frame" x="20" y="195" width="119" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Language" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Pd-8G-kbs">
+                                <rect key="frame" x="22" y="304" width="76" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -215,8 +234,9 @@
                     </navigationItem>
                     <connections>
                         <outlet property="authorField" destination="LS2-3n-g64" id="h6Y-em-pkF"/>
+                        <outlet property="expirePicker" destination="2hk-XQ-THQ" id="IR6-N3-iyv"/>
+                        <outlet property="languagePicker" destination="NAb-y1-bAc" id="cVL-CC-spA"/>
                         <outlet property="pasteContent" destination="eam-ec-y5p" id="aTf-uH-vep"/>
-                        <outlet property="pickerView" destination="NAb-y1-bAc" id="zpb-Yv-07U"/>
                         <outlet property="privateSwitch" destination="wJM-Ge-YOn" id="v2S-0u-WrG"/>
                         <outlet property="titleField" destination="iNc-Is-mVL" id="JAR-1w-wb0"/>
                     </connections>
